--- a/GoodFood/Base.lproj/Main.storyboard
+++ b/GoodFood/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="NHb-nR-FUM">
                         <barButtonItem key="rightBarButtonItem" title="Sign Up" id="8Vf-fo-c2A">
-                            <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <segue destination="R0e-XP-MPf" kind="show" id="eEu-0r-cD8"/>
                             </connections>
