--- a/GoodFood/Base.lproj/LaunchScreen.storyboard
+++ b/GoodFood/Base.lproj/LaunchScreen.storyboard
@@ -17,9 +17,10 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="4ob-Af-hfj">
                                 <rect key="frame" x="40" y="229" width="335" height="319"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="4ob-Af-hfj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Fmj-ua-Mgi"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4ob-Af-hfj" secondAttribute="bottom" constant="314" id="PrC-Pp-9x1"/>
